api for dashboard detail is done
